Fix vertical alignment and size social media buttons

--- a/scss/pages/_huddle-landing-page.scss
+++ b/scss/pages/_huddle-landing-page.scss
@@ -15,10 +15,6 @@
   &-logo__img {
     max-width: 12rem;
 
-    // &:focus-visible {
-    //   outline: none;
-    // }
-
     @include m.breakpoint-lg() {
       max-width: 17rem;
     }
@@ -43,6 +39,7 @@
 }
 
 .landing-article {
+  margin-bottom: 4rem;
   grid-area: article;
   color: v.$white;
   text-align: center;
@@ -108,7 +105,7 @@
 }
 
 .landing-footer {
-  margin-top: 4rem;
+  margin-bottom: 4rem;
   display: flex;
   justify-content: center;
   grid-area: footer;
@@ -136,12 +133,14 @@
 
   &__icon {
     --fa-display: flex;
-    --fa-border-radius: 2rem;
+    --fa-border-padding: 1.7rem;
+    --fa-border-radius: 4rem;
     justify-content: center;
     align-items: center;
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 1.7rem;
     color: v.$white;
+    font-size: 1.3rem;
+    height: 1.25em;
 
     &:hover {
       color: v.$soft-magenta;
